Wire up Monolith psych sheet API
